--- a/html/thuc-hanh-4/style4.css
+++ b/html/thuc-hanh-4/style4.css
@@ -1,51 +1,70 @@
-body {
 
 
-  }
-  .test{
-    background-repeat: no-repeat;
-    background-size:28rem;
-    background-position: -4rem 0.5rem;
-    background-image: url("https://images02.nicepage.com/c461c07a441a5d220e8feb1a/d1ea4ec1b90e53b28376e977/healthy-food-basket_23-2147694076.jpg");
+.fullcontent{
     
-    width: 300px;
-    height: 300px;
-    border:none;
-    border-radius:50%;
-    box-shadow: 10px 8px 5px black;
+}
+#line1{
+    color: red;
+    font-size: 50px;
+    font-family: 'Orbitron', sans-serif;
+    font-family: 'Rowdies', "cursive";
+}
+#line2{
+    font-family: 'Moon Dance', cursive;
+    font-style: italic;
 
-
-   
-  }
-  .row1{
-    padding-top:5rem;
+}
+.header{
+text-align: center;
+}
+.bodier{
+    
     display: flex;
+    flex-wrap:wrap;
     justify-content:center;
-
-  }
-  .letter{
-    padding-left: 5rem;
-    text-align:left;
-    width: 50%;
-  }
-  #line{
+}
+#picture{
+    clip-path: circle(35% at 50% 50%);
+    box-shadow:10px 10px 20px black;
+}
+#line3{
+    border: none;
+    height: 2px;
+    color: red;
     background-color: red;
-    border:none;
-  }
-
-  .btn-link {
+}
+#line4{
     position: relative;
-    color: #222;
-    text-decoration: none;
+    text-decoration:none;
     text-transform: uppercase;
-  }
+    color:black;
 
-  .btn-link::after {
+
+}
+#line4::after {
     content: "";
     position: absolute;
-    background-color: red;
-    width: 100%;
-    height: 2px;
+    background: red;
     top: 100%;
-    left: 0;
-  }
+    left: 0%;
+    height: 2px;
+    width:100%;
+}
+#line4::before{
+    content: "";
+    position: absolute;
+    background: red;
+    top: 0;
+    left: 0%;
+    height: 100%;
+    width:0;
+}
+#line4:hover::before{
+    width: 100%;
+    transition: 1s;
+    z-index: -1;
+}
+.paragraph{
+    height: 200px;
+    width: 400px;
+}
